--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
         <h2>Catégories des sous-domaines</h2>
         <div class="filters">
             <button class="filter-btn" onclick="filterCards('all')">Tous</button>
-            <button class="filter-btn" onclick="filterCards('rh')">RH</button>
-            <button class="filter-btn" onclick="filterCards('comptabilite')">Comptabilité</button>
-            <button class="filter-btn" onclick="filterCards('gestionnaire')">Gestionnaires de Paie</button>
+            <button class="filter-btn" onclick="filterCards('rh')"> # RH</button>
+            <button class="filter-btn" onclick="filterCards('comptabilite')"> # Comptabilité</button>
+            <button class="filter-btn" onclick="filterCards('gestionnaire')"> # Gestionnaires de Paie</button>
+            <button class="filter-btn" onclick="filterCards('bureautique')"> # La Bureautique</button>
         </div>
     </section>
 
@@ -52,6 +53,15 @@
             <button class="download-btn">Télécharger le PDF</button>
             <button class="competences-btn" onclick="showCompetences('popup-gestionnaire')">Compétences</button>
         </div>
+
+        <!-- Carte bureautique -->
+        <div class="card bureautique">
+            <h3>Bureautique</h3>
+            <p>Description du certificat de la bureautique...</p>
+            <button class="download-btn">Télécharger le PDF</button>
+            <button class="competences-btn" onclick="showCompetences('popup-gestionnaire')">Compétences</button>
+        </div>
+
     </section>
 
     <!-- Popup RH -->
