--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- Catégories des sous-domaines et filtres (en dehors de l'en-tête) -->
     <section class="filters-section">
-        <h2>Catégories des sous-domaines</h2>
+        <h2>Catégories des sous-secteurs</h2>
         <div class="filters">
             <button class="filter-btn" onclick="filterCards('all')">Tous</button>
             <button class="filter-btn" onclick="filterCards('rh')"> # RH</button>
@@ -33,7 +33,7 @@
         <!-- Carte RH -->
         <div class="card rh">
             <h3>RH</h3>
-            <p>Description du certificat RH...</p>
+            <p> Délivré par : Openclassrooms </p>
             <button class="download-btn">Télécharger le PDF</button>
             <button class="competences-btn" onclick="showCompetences('popup-rh')">Compétences</button>
         </div>
@@ -41,7 +41,7 @@
         <!-- Carte Comptabilité -->
         <div class="card comptabilite">
             <h3>Comptabilité</h3>
-            <p>Description du certificat Comptabilité...</p>
+            <p> Délivré par : Openclassrooms</p>
             <button class="download-btn">Télécharger le PDF</button>
             <button class="competences-btn" onclick="showCompetences('popup-comptabilite')">Compétences</button>
         </div>
@@ -49,7 +49,7 @@
         <!-- Carte Gestionnaire -->
         <div class="card gestionnaire">
             <h3>Gestionnaire de Paie</h3>
-            <p>Description du certificat Gestionnaire de Paie...</p>
+            <p> Délivré par : Openclassrooms </p>
             <button class="download-btn">Télécharger le PDF</button>
             <button class="competences-btn" onclick="showCompetences('popup-gestionnaire')">Compétences</button>
         </div>
@@ -57,7 +57,7 @@
         <!-- Carte bureautique -->
         <div class="card bureautique">
             <h3>Bureautique</h3>
-            <p>Description du certificat de la bureautique...</p>
+            <p> Délivré par : Openclassrooms </p>
             <button class="download-btn">Télécharger le PDF</button>
             <button class="competences-btn" onclick="showCompetences('popup-gestionnaire')">Compétences</button>
         </div>
