--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <!-- En-tête avec le titre principal et l'image -->
     <header>
         <div class="header-left">
             <h1>Certificats RH & Gestion<br>Thomas Guy Vernin</h1>
@@ -16,7 +14,6 @@
         <img id="header-image" src="images/photo_thomas_vernin.jpg" alt="Photo Thomas Vernin">
     </header>
 
-    <!-- Catégories des sous-domaines et filtres (en dehors de l'en-tête) -->
     <section class="filters-section">
         <h2>Catégories des sous-secteurs</h2>
         <div class="filters">
@@ -56,11 +53,12 @@
 
         <!-- Carte bureautique -->
         <div class="card bureautique">
-            <h3>Bureautique</h3>
+            <h3> Maîtrisez Excel </h3>
             <p> Délivré par : Openclassrooms </p>
-            <button class="download-btn">Télécharger le PDF</button>
-            <button class="competences-btn" onclick="showCompetences('popup-gestionnaire')">Compétences</button>
+            <button class="download-btn" onclick="window.open('https://drive.google.com/file/d/1qrsQXhaOD-LRPvRjHKrFUIKMhPYDQ7l4/view?usp=sharing', '_blank')">Télécharger le PDF</button>
+            <button class="competences-btn" onclick="showCompetences('popup-bureautique')">Compétences</button>
         </div>
+
 
     </section>
 
@@ -103,7 +101,51 @@
         </div>
     </div>
 
+    <!-- Popup Bureautique -->
+    <div id="popup-bureautique" class="popup">
+        <div class="popup-content">
+            <span class="close-btn" onclick="closePopup('popup-bureautique')">&times;</span>
+            <h2>Maîtrisez Excel</h2>
+            <ul>
+                <li>Gestion de la paie</li>
+                <li>Législation sociale</li>
+                <li>Management d’équipe</li>
+            </ul>
+        </div>
+    </div>
+
+
+    
+
     <script src="scripts.js"></script>
 </body>
+
+<footer>
+    <div class="footer-container">
+        <div class="footer-section">
+            <h3>À propos</h3>
+            <p>Thomas Guy Vernin, spécialiste en RH, gestion, et bureautique. Découvrez mes certificats et compétences professionnelles.</p>
+        </div>
+        <div class="footer-section">
+            <h3>Contact</h3>
+            <ul>
+                <li>Email : <a href="mailto:thomas.vernin@example.com">thomas.vernin@example.com</a></li>
+                <li>Téléphone : +33 6 12 34 56 78</li>
+                <li>LinkedIn : <a href="https://linkedin.com/in/thomas-vernin" target="_blank">Thomas Vernin</a></li>
+            </ul>
+        </div>
+        <div class="footer-section">
+            <h3>Liens rapides</h3>
+            <ul>
+                <li><a href="#header">Haut de page</a></li>
+                <li><a href="#cards-container">Certificats</a></li>
+                <li><a href="https://openclassrooms.com/" target="_blank">OpenClassrooms</a></li>
+            </ul>
+        </div>
+    </div>
+    <div class="footer-bottom">
+        <p>&copy; 2024 Thomas Guy Vernin. Tous droits réservés.</p>
+    </div>
+</footer>
 </html>
 
