--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Certificats RH & Gestion</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
     <header>
@@ -105,47 +106,19 @@
     <div id="popup-bureautique" class="popup">
         <div class="popup-content">
             <span class="close-btn" onclick="closePopup('popup-bureautique')">&times;</span>
-            <h2>Maîtrisez Excel</h2>
+            <h2><i class="fas fa-graduation-cap"></i> Maîtrisez Excel</h2>
             <ul>
-                <li>Gestion de la paie</li>
-                <li>Législation sociale</li>
-                <li>Management d’équipe</li>
+                <li>Prendre en main un fichier Excel</li>
+                <li>Mettre en page un fichier Excel</li>
+                <li>Manipuler des données sur Excel</li>
             </ul>
         </div>
     </div>
 
-
-    
 
     <script src="scripts.js"></script>
 </body>
 
-<footer>
-    <div class="footer-container">
-        <div class="footer-section">
-            <h3>À propos</h3>
-            <p>Thomas Guy Vernin, spécialiste en RH, gestion, et bureautique. Découvrez mes certificats et compétences professionnelles.</p>
-        </div>
-        <div class="footer-section">
-            <h3>Contact</h3>
-            <ul>
-                <li>Email : <a href="mailto:thomas.vernin@example.com">thomas.vernin@example.com</a></li>
-                <li>Téléphone : +33 6 12 34 56 78</li>
-                <li>LinkedIn : <a href="https://linkedin.com/in/thomas-vernin" target="_blank">Thomas Vernin</a></li>
-            </ul>
-        </div>
-        <div class="footer-section">
-            <h3>Liens rapides</h3>
-            <ul>
-                <li><a href="#header">Haut de page</a></li>
-                <li><a href="#cards-container">Certificats</a></li>
-                <li><a href="https://openclassrooms.com/" target="_blank">OpenClassrooms</a></li>
-            </ul>
-        </div>
-    </div>
-    <div class="footer-bottom">
-        <p>&copy; 2024 Thomas Guy Vernin. Tous droits réservés.</p>
-    </div>
-</footer>
+
 </html>
 
