--- a/index.html
+++ b/index.html
@@ -29,62 +29,62 @@
     <section id="cards-container">
         <!-- RH -->
         <div class="card rh card-1">
-            <h3>RH #1</h3>
+            <h3>Maîtrisez l'ingénierie <br> financière de la<br> formation professionnelle</h3>
             <p> Délivré par : Openclassrooms </p>
-            <button class="download-btn">Télécharger le PDF</button>
+            <button class="download-btn" onclick="window.open('https://drive.google.com/file/d/1SkY4TxIerlE4NkPlYzdxlUxUT5LTMOPZ/view?usp=sharing', '_blank')">Télécharger le PDF</button>
             <button class="competences-btn" onclick="showCompetences('popup-rh-1')">Compétences</button>
-        </div>
-
-        <div class="card rh card-2">
-            <h3>RH #2</h3>
-            <p> Délivré par : Openclassrooms </p>
-            <button class="download-btn">Télécharger le PDF</button>
-            <button class="competences-btn" onclick="showCompetences('popup-rh-2')">Compétences</button>
         </div>
 
         <!-- Carte Comptabilité  -->
         <div class="card comptabilite card-1">
-            <h3>Comptabilité #1</h3>
+            <h3>Réalisez les<br> opérations courantes<br> de comptabilité</h3>
             <p> Délivré par : Openclassrooms</p>
-            <button class="download-btn">Télécharger le PDF</button>
+            <button class="download-btn" onclick="window.open('https://drive.google.com/file/d/1tne6XrUQKO_bLUG6WNbviHFqvUzH62sZ/view?usp=sharing', '_blank')">Télécharger le PDF</button>
             <button class="competences-btn" onclick="showCompetences('popup-comptabilite-1')">Compétences</button>
-        </div>
-
-        <div class="card comptabilite card-2">
-            <h3>Comptabilité #2</h3>
-            <p> Délivré par : Openclassrooms</p>
-            <button class="download-btn">Télécharger le PDF</button>
-            <button class="competences-btn" onclick="showCompetences('popup-comptabilite-2')">Compétences</button>
         </div>
 
         <!-- Carte Gestionnaire -->
         <div class="card gestionnaire card-1">
-            <h3>Gestionnaire de Paie #1</h3>
+            <h3>Calculez en paie <br> les événements de<br> la vie du salarié</h3>
             <p> Délivré par : Openclassrooms </p>
-            <button class="download-btn">Télécharger le PDF</button>
+            <button class="download-btn" onclick="window.open('https://drive.google.com/file/d/1-wJaLEnyFPiKAAPj0mVkTDPCqNniBdnF/view?usp=sharing', '_blank')">Télécharger le PDF</button>
             <button class="competences-btn" onclick="showCompetences('popup-gestionnaire-1')">Compétences</button>
         </div>
 
         <div class="card gestionnaire card-2">
-            <h3>Gestionnaire de Paie #2</h3>
+            <h3>Décryptez <br>une fiche <br>de paie</h3>
             <p> Délivré par : Openclassrooms </p>
-            <button class="download-btn">Télécharger le PDF</button>
+            <button class="download-btn" onclick="window.open('https://drive.google.com/file/d/1s2BZqrnhl8lBMZvxCePNnqKIB2d04Qb_/view?usp=sharing', '_blank')">Télécharger le PDF</button>
             <button class="competences-btn" onclick="showCompetences('popup-gestionnaire-2')">Compétences</button>
+        </div>
+
+        <div class="card gestionnaire card-3">
+            <h3>Paramétrez<br> votre logiciel <br>de paie</h3>
+            <p> Délivré par : Openclassrooms </p>
+            <button class="download-btn" onclick="window.open('https://drive.google.com/file/d/1o4LCBzKErijXs9g-RGrYQUDS05D-SSIw/view?usp=sharing', '_blank')">Télécharger le PDF</button>
+            <button class="competences-btn" onclick="showCompetences('popup-gestionnaire-3')">Compétences</button>
         </div>
 
         <!-- Carte bureautique -->
         <div class="card bureautique card-1">
-            <h3><i class="fas fa-graduation-cap"></i> Maîtrisez Excel #1</h3>
+            <h3><i class="fas fa-graduation-cap"></i> Maîtrisez les <br>fondamentaux <br>Excel </h3>
             <p> Délivré par : Openclassrooms </p>
             <button class="download-btn" onclick="window.open('https://drive.google.com/file/d/1qrsQXhaOD-LRPvRjHKrFUIKMhPYDQ7l4/view?usp=sharing', '_blank')">Télécharger le PDF</button>
             <button class="competences-btn" onclick="showCompetences('popup-bureautique-1')">Compétences</button>
         </div>
 
         <div class="card bureautique card-2">
-            <h3><i class="fas fa-graduation-cap"></i> Maîtrisez Excel #2</h3>
+            <h3><i class="fas fa-graduation-cap"></i>Optimisez votre <br>apprentissage avec<br> l'Intelligence Artificielle</h3>
             <p> Délivré par : Openclassrooms </p>
-            <button class="download-btn">Télécharger le PDF</button>
+            <button class="download-btn" onclick="window.open('https://drive.google.com/file/d/12Fn2C2KFFYZQuSj-L8mEfUE4W65bfqnM/view?usp=sharing', '_blank')">Télécharger le PDF</button>
             <button class="competences-btn" onclick="showCompetences('popup-bureautique-2')">Compétences</button>
+        </div>
+
+        <div class="card bureautique card-3">
+            <h3><i class="fas fa-graduation-cap"></i>Initiez-vous <br> au traitement<br> de texte</h3>
+            <p> Délivré par : Openclassrooms </p>
+            <button class="download-btn" onclick="window.open('https://drive.google.com/file/d/1gNmQ-c88d6jp1UWQCBVLUapdmR3Q6eNJ/view?usp=sharing', '_blank')">Télécharger le PDF</button>
+            <button class="competences-btn" onclick="showCompetences('popup-bureautique-3')">Compétences</button>
         </div>
     </section>
 
@@ -92,7 +92,7 @@
     <div id="popup-rh-1" class="popup">
         <div class="popup-content">
             <span class="close-btn" onclick="closePopup('popup-rh-1')">&times;</span>
-            <h2>Compétences Certificat RH #1</h2>
+            <h2>Compétences Certificat RH #1 : Maîtrisez l'ingénierie financière de la formation professionnelle</h2>
             <ul>
                 <li>Recrutement</li>
                 <li>Gestion des conflits</li>
@@ -101,23 +101,11 @@
         </div>
     </div>
 
-    <div id="popup-rh-2" class="popup">
-        <div class="popup-content">
-            <span class="close-btn" onclick="closePopup('popup-rh-2')">&times;</span>
-            <h2>Compétences Certificat RH #2</h2>
-            <ul>
-                <li>Recrutement avancé</li>
-                <li>Développement du leadership</li>
-                <li>Stratégie RH</li>
-            </ul>
-        </div>
-    </div>
-
     <!-- Popup Comptabilité -->
     <div id="popup-comptabilite-1" class="popup">
         <div class="popup-content">
             <span class="close-btn" onclick="closePopup('popup-comptabilite-1')">&times;</span>
-            <h2>Compétences Certificat Comptabilité #1</h2>
+            <h2>Compétences Certificat Comptabilité #1 : Réalisez les opérations courantes de comptabilité</h2>
             <ul>
                 <li>Comptabilité générale</li>
                 <li>Analyse financière</li>
@@ -126,23 +114,11 @@
         </div>
     </div>
 
-    <div id="popup-comptabilite-2" class="popup">
-        <div class="popup-content">
-            <span class="close-btn" onclick="closePopup('popup-comptabilite-2')">&times;</span>
-            <h2>Compétences Certificat Comptabilité #2</h2>
-            <ul>
-                <li>Audit comptable</li>
-                <li>Gestion budgétaire</li>
-                <li>Fiscalité avancée</li>
-            </ul>
-        </div>
-    </div>
-
     <!-- Popup Gestionnaire  -->
     <div id="popup-gestionnaire-1" class="popup">
         <div class="popup-content">
             <span class="close-btn" onclick="closePopup('popup-gestionnaire-1')">&times;</span>
-            <h2>Compétences Certificat Gestionnaire de Paie #1</h2>
+            <h2>Compétences Certificat Gestionnaire de Paie #1 : Calculez en paie les événements de la vie du salarié</h2>
             <ul>
                 <li>Gestion de la paie</li>
                 <li>Législation sociale</li>
@@ -154,7 +130,19 @@
     <div id="popup-gestionnaire-2" class="popup">
         <div class="popup-content">
             <span class="close-btn" onclick="closePopup('popup-gestionnaire-2')">&times;</span>
-            <h2>Compétences Certificat Gestionnaire de Paie #2</h2>
+            <h2>Compétences Certificat Gestionnaire de Paie #2 : Décryptez une fiche de paie</h2>
+            <ul>
+                <li>Gestion avancée de la paie</li>
+                <li>Optimisation des coûts</li>
+                <li>Responsabilité sociale</li>
+            </ul>
+        </div>
+    </div>
+
+    <div id="popup-gestionnaire-3" class="popup">
+        <div class="popup-content">
+            <span class="close-btn" onclick="closePopup('popup-gestionnaire-3')">&times;</span>
+            <h2>Compétences Certificat Gestionnaire de Paie #3 : Paramétrez votre logiciel de paie</h2>
             <ul>
                 <li>Gestion avancée de la paie</li>
                 <li>Optimisation des coûts</li>
@@ -179,7 +167,19 @@
     <div id="popup-bureautique-2" class="popup">
         <div class="popup-content">
             <span class="close-btn" onclick="closePopup('popup-bureautique-2')">&times;</span>
-            <h2>Compétences Certificat Bureautique #2</h2>
+            <h2>Compétences Certificat Bureautique #2 : Optimisez votre apprentissage avec l'Intelligence Artificielle</h2>
+            <ul>
+                <li>Calculs avancés avec Excel</li>
+                <li>Création de graphiques Excel</li>
+                <li>Automatisation avec VBA</li>
+            </ul>
+        </div>
+    </div>
+
+    <div id="popup-bureautique-3" class="popup">
+        <div class="popup-content">
+            <span class="close-btn" onclick="closePopup('popup-bureautique-3')">&times;</span>
+            <h2>Compétences Certificat Bureautique #3 : Initiez-vous au traitement de texte </h2>
             <ul>
                 <li>Calculs avancés avec Excel</li>
                 <li>Création de graphiques Excel</li>
