--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
             <span class="close-btn" onclick="closePopup('popup-rh-1')">&times;</span>
             <h2>Compétences Certificat RH #1 : Maîtrisez l'ingénierie financière de la formation professionnelle</h2>
             <ul>
-                <li>Recrutement</li>
-                <li>Gestion des conflits</li>
-                <li>Communication</li>
+                <li>Identifier les évolutions des dispositifs et du financement de la formation</li>
+                <li>Mobiliser le CPF comme outil de financement de la formation</li>
+                <li>Optimiser le choix d'un dispositif de financement de la formation</li>
             </ul>
         </div>
     </div>
@@ -107,9 +107,8 @@
             <span class="close-btn" onclick="closePopup('popup-comptabilite-1')">&times;</span>
             <h2>Compétences Certificat Comptabilité #1 : Réalisez les opérations courantes de comptabilité</h2>
             <ul>
-                <li>Comptabilité générale</li>
-                <li>Analyse financière</li>
-                <li>Fiscalité</li>
+                <li>Identifier les éléments caractéristiques de toute écriture comptable</li>
+                <li>Saisir les ventes, les achats, les opérations de trésorerie, les éléments liés à la TVA et les frais de personnels en comptabilité</li>
             </ul>
         </div>
     </div>
@@ -120,9 +119,10 @@
             <span class="close-btn" onclick="closePopup('popup-gestionnaire-1')">&times;</span>
             <h2>Compétences Certificat Gestionnaire de Paie #1 : Calculez en paie les événements de la vie du salarié</h2>
             <ul>
-                <li>Gestion de la paie</li>
-                <li>Législation sociale</li>
-                <li>Management d’équipe</li>
+                <li>Maîtriser les congés payés en France.</li>
+                <li>Calculer en paie les différents éléments de la maladie</li>
+                <li>Répercuter sur le bulletin d’autres événements de la vie des salariés</li>
+                <li>Maîtriser les différents événements assimilables à un départ du salarié</li>
             </ul>
         </div>
     </div>
@@ -132,9 +132,9 @@
             <span class="close-btn" onclick="closePopup('popup-gestionnaire-2')">&times;</span>
             <h2>Compétences Certificat Gestionnaire de Paie #2 : Décryptez une fiche de paie</h2>
             <ul>
-                <li>Gestion avancée de la paie</li>
-                <li>Optimisation des coûts</li>
-                <li>Responsabilité sociale</li>
+                <li>Identifier les informations contenues dans un bulletin de paie</li>
+                <li>Appréhender la logique du bulletin de paie</li>
+                <li>Ajouter les cotisations sur un bulletin de paie</li>
             </ul>
         </div>
     </div>
@@ -144,9 +144,9 @@
             <span class="close-btn" onclick="closePopup('popup-gestionnaire-3')">&times;</span>
             <h2>Compétences Certificat Gestionnaire de Paie #3 : Paramétrez votre logiciel de paie</h2>
             <ul>
-                <li>Gestion avancée de la paie</li>
-                <li>Optimisation des coûts</li>
-                <li>Responsabilité sociale</li>
+                <li>Prendre en main un logiciel de paie</li>
+                <li>Paramétrer le logiciel de paie</li>
+                <li>Vérifier le paramétrage de votre logiciel de paie</li>
             </ul>
         </div>
     </div>
@@ -155,7 +155,7 @@
     <div id="popup-bureautique-1" class="popup">
         <div class="popup-content">
             <span class="close-btn" onclick="closePopup('popup-bureautique-1')">&times;</span>
-            <h2>Compétences Certificat Bureautique #1</h2>
+            <h2>Compétences Certificat Bureautique #1 : Maîtrisez les fondamentaux Excel</h2>
             <ul>
                 <li>Prendre en main un fichier Excel</li>
                 <li>Mettre en page un fichier Excel</li>
@@ -169,9 +169,8 @@
             <span class="close-btn" onclick="closePopup('popup-bureautique-2')">&times;</span>
             <h2>Compétences Certificat Bureautique #2 : Optimisez votre apprentissage avec l'Intelligence Artificielle</h2>
             <ul>
-                <li>Calculs avancés avec Excel</li>
-                <li>Création de graphiques Excel</li>
-                <li>Automatisation avec VBA</li>
+                <li>Prendre en main votre apprentissage avec l’intelligence artificielle</li>
+                <li>Approfondir votre apprentissage avec l’intelligence artificielle</li>
             </ul>
         </div>
     </div>
@@ -181,9 +180,9 @@
             <span class="close-btn" onclick="closePopup('popup-bureautique-3')">&times;</span>
             <h2>Compétences Certificat Bureautique #3 : Initiez-vous au traitement de texte </h2>
             <ul>
-                <li>Calculs avancés avec Excel</li>
-                <li>Création de graphiques Excel</li>
-                <li>Automatisation avec VBA</li>
+                <li>Maîtriser les fondamentaux d’un traitement de texte</li>
+                <li>Utiliser les fonctionnalités de base du traitement de texte</li>
+                <li>Optimiser votre productivité</li>
             </ul>
         </div>
     </div>
