--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <section id="cards-container">
         <!-- RH -->
         <div class="card rh card-1">
-            <h3>Maîtrisez l'ingénierie <br> financière de la<br> formation professionnelle</h3>
+            <h3><i class="fas fa-graduation-cap"></i> Maîtrisez l'ingénierie <br> financière de la<br> formation professionnelle</h3>
             <p> Délivré par : Openclassrooms </p>
             <button class="download-btn" onclick="window.open('https://drive.google.com/file/d/1SkY4TxIerlE4NkPlYzdxlUxUT5LTMOPZ/view?usp=sharing', '_blank')">Télécharger le PDF</button>
             <button class="competences-btn" onclick="showCompetences('popup-rh-1')">Compétences</button>
@@ -37,7 +37,7 @@
 
         <!-- Carte Comptabilité  -->
         <div class="card comptabilite card-1">
-            <h3>Réalisez les<br> opérations courantes<br> de comptabilité</h3>
+            <h3><i class="fas fa-graduation-cap"></i> Réalisez les<br> opérations courantes<br> de comptabilité</h3>
             <p> Délivré par : Openclassrooms</p>
             <button class="download-btn" onclick="window.open('https://drive.google.com/file/d/1tne6XrUQKO_bLUG6WNbviHFqvUzH62sZ/view?usp=sharing', '_blank')">Télécharger le PDF</button>
             <button class="competences-btn" onclick="showCompetences('popup-comptabilite-1')">Compétences</button>
@@ -45,21 +45,21 @@
 
         <!-- Carte Gestionnaire -->
         <div class="card gestionnaire card-1">
-            <h3>Calculez en paie <br> les événements de<br> la vie du salarié</h3>
+            <h3><i class="fas fa-graduation-cap"></i> Calculez en paie <br> les événements de<br> la vie du salarié</h3>
             <p> Délivré par : Openclassrooms </p>
             <button class="download-btn" onclick="window.open('https://drive.google.com/file/d/1-wJaLEnyFPiKAAPj0mVkTDPCqNniBdnF/view?usp=sharing', '_blank')">Télécharger le PDF</button>
             <button class="competences-btn" onclick="showCompetences('popup-gestionnaire-1')">Compétences</button>
         </div>
 
         <div class="card gestionnaire card-2">
-            <h3>Décryptez <br>une fiche <br>de paie</h3>
+            <h3><i class="fas fa-graduation-cap"></i> Décryptez <br>une fiche <br>de paie</h3>
             <p> Délivré par : Openclassrooms </p>
             <button class="download-btn" onclick="window.open('https://drive.google.com/file/d/1s2BZqrnhl8lBMZvxCePNnqKIB2d04Qb_/view?usp=sharing', '_blank')">Télécharger le PDF</button>
             <button class="competences-btn" onclick="showCompetences('popup-gestionnaire-2')">Compétences</button>
         </div>
 
         <div class="card gestionnaire card-3">
-            <h3>Paramétrez<br> votre logiciel <br>de paie</h3>
+            <h3><i class="fas fa-graduation-cap"></i> Paramétrez<br> votre logiciel <br>de paie</h3>
             <p> Délivré par : Openclassrooms </p>
             <button class="download-btn" onclick="window.open('https://drive.google.com/file/d/1o4LCBzKErijXs9g-RGrYQUDS05D-SSIw/view?usp=sharing', '_blank')">Télécharger le PDF</button>
             <button class="competences-btn" onclick="showCompetences('popup-gestionnaire-3')">Compétences</button>
@@ -74,17 +74,24 @@
         </div>
 
         <div class="card bureautique card-2">
-            <h3><i class="fas fa-graduation-cap"></i>Optimisez votre <br>apprentissage avec<br> l'Intelligence Artificielle</h3>
+            <h3><i class="fas fa-graduation-cap"></i> Optimisez votre <br>apprentissage avec<br> l'Intelligence Artificielle</h3>
             <p> Délivré par : Openclassrooms </p>
             <button class="download-btn" onclick="window.open('https://drive.google.com/file/d/12Fn2C2KFFYZQuSj-L8mEfUE4W65bfqnM/view?usp=sharing', '_blank')">Télécharger le PDF</button>
             <button class="competences-btn" onclick="showCompetences('popup-bureautique-2')">Compétences</button>
         </div>
 
         <div class="card bureautique card-3">
-            <h3><i class="fas fa-graduation-cap"></i>Initiez-vous <br> au traitement<br> de texte</h3>
+            <h3><i class="fas fa-graduation-cap"></i> Initiez-vous <br> au traitement<br> de texte</h3>
             <p> Délivré par : Openclassrooms </p>
             <button class="download-btn" onclick="window.open('https://drive.google.com/file/d/1gNmQ-c88d6jp1UWQCBVLUapdmR3Q6eNJ/view?usp=sharing', '_blank')">Télécharger le PDF</button>
             <button class="competences-btn" onclick="showCompetences('popup-bureautique-3')">Compétences</button>
+        </div>
+
+        <div class="card bureautique card-4">
+            <h3><i class="fas fa-graduation-cap"></i> Communiquez en <br> utilisant les outils <br> numériques </h3>
+            <p> Délivré par : Openclassrooms </p>
+            <button class="download-btn" onclick="window.open('https://drive.google.com/file/d/1OC_XVDONTc680zib923lktsaQw7OUK6U/view?usp=sharing', '_blank')">Télécharger le PDF</button>
+            <button class="competences-btn" onclick="showCompetences('popup-bureautique-4')">Compétences</button>
         </div>
     </section>
 
@@ -92,12 +99,36 @@
     <div id="popup-rh-1" class="popup">
         <div class="popup-content">
             <span class="close-btn" onclick="closePopup('popup-rh-1')">&times;</span>
-            <h2>Compétences Certificat RH #1 : Maîtrisez l'ingénierie financière de la formation professionnelle</h2>
+            <h2> <i class="fas fa-graduation-cap"></i> Compétences Certificat RH #1 : Maîtrisez l'ingénierie financière de la formation professionnelle</h2>
             <ul>
-                <li>Identifier les évolutions des dispositifs et du financement de la formation</li>
-                <li>Mobiliser le CPF comme outil de financement de la formation</li>
-                <li>Optimiser le choix d'un dispositif de financement de la formation</li>
-            </ul>
+                <li>
+                    Identifier les évolutions des dispositifs et du financement de la formation
+                    <ul>
+                        <li>Je suis capable de suivre les évolutions législatives et réglementaires qui impactent les dispositifs de formation.</li>
+                        <li>J’analyse les changements dans les critères d'éligibilité pour les financements de la formation afin de rester à jour.</li>
+                        <li>Je comprends les impacts des réformes sur les entreprises et les salariés, ce qui me permet d'adapter mes conseils.</li>
+                        <li>Je compare les dispositifs historiques et récents pour fournir des recommandations éclairées.</li>
+                    </ul>
+                </li>
+                <li>
+                    Mobiliser le CPF comme outil de financement de la formation
+                    <ul>
+                        <li>Je maîtrise le fonctionnement du Compte Personnel de Formation (CPF) et je sais comment l’utiliser efficacement.</li>
+                        <li>J’accompagne les salariés dans l’utilisation de leur CPF pour financer leurs formations, en les guidant à chaque étape.</li>
+                        <li>Je les informe sur les possibilités de financement par le CPF en fonction des types de formations disponibles.</li>
+                        <li>Je détermine les critères d’éligibilité des formations au CPF pour maximiser les opportunités de financement.</li>
+                    </ul>
+                </li>
+                <li>
+                    Optimiser le choix d'un dispositif de financement de la formation
+                    <ul>
+                        <li>J’évalue les besoins de formation des salariés et des entreprises pour proposer des solutions adaptées.</li>
+                        <li>Je compare les différents dispositifs de financement, tels que le CPF et le plan de développement des compétences, pour choisir le plus approprié.</li>
+                        <li>Je conseille sur le choix optimal en tenant compte des objectifs de formation et des contraintes budgétaires de l’entreprise.</li>
+                        <li>Je maximiser les opportunités de financement en fonction des priorités stratégiques de l'entreprise.</li>
+                    </ul>
+                </li>
+            </ul>            
         </div>
     </div>
 
@@ -105,7 +136,7 @@
     <div id="popup-comptabilite-1" class="popup">
         <div class="popup-content">
             <span class="close-btn" onclick="closePopup('popup-comptabilite-1')">&times;</span>
-            <h2>Compétences Certificat Comptabilité #1 : Réalisez les opérations courantes de comptabilité</h2>
+            <h2> <i class="fas fa-graduation-cap"></i> Compétences Certificat Comptabilité #1 : Réalisez les opérations courantes de comptabilité</h2>
             <ul>
                 <li>Identifier les éléments caractéristiques de toute écriture comptable</li>
                 <li>Saisir les ventes, les achats, les opérations de trésorerie, les éléments liés à la TVA et les frais de personnels en comptabilité</li>
@@ -117,7 +148,7 @@
     <div id="popup-gestionnaire-1" class="popup">
         <div class="popup-content">
             <span class="close-btn" onclick="closePopup('popup-gestionnaire-1')">&times;</span>
-            <h2>Compétences Certificat Gestionnaire de Paie #1 : Calculez en paie les événements de la vie du salarié</h2>
+            <h2> <i class="fas fa-graduation-cap"></i> Compétences Certificat Gestionnaire de Paie #1 : Calculez en paie les événements de la vie du salarié</h2>
             <ul>
                 <li>Maîtriser les congés payés en France.</li>
                 <li>Calculer en paie les différents éléments de la maladie</li>
@@ -130,7 +161,7 @@
     <div id="popup-gestionnaire-2" class="popup">
         <div class="popup-content">
             <span class="close-btn" onclick="closePopup('popup-gestionnaire-2')">&times;</span>
-            <h2>Compétences Certificat Gestionnaire de Paie #2 : Décryptez une fiche de paie</h2>
+            <h2> <i class="fas fa-graduation-cap"></i> Compétences Certificat Gestionnaire de Paie #2 : Décryptez une fiche de paie</h2>
             <ul>
                 <li>Identifier les informations contenues dans un bulletin de paie</li>
                 <li>Appréhender la logique du bulletin de paie</li>
@@ -142,7 +173,7 @@
     <div id="popup-gestionnaire-3" class="popup">
         <div class="popup-content">
             <span class="close-btn" onclick="closePopup('popup-gestionnaire-3')">&times;</span>
-            <h2>Compétences Certificat Gestionnaire de Paie #3 : Paramétrez votre logiciel de paie</h2>
+            <h2> <i class="fas fa-graduation-cap"></i> Compétences Certificat Gestionnaire de Paie #3 : Paramétrez votre logiciel de paie</h2>
             <ul>
                 <li>Prendre en main un logiciel de paie</li>
                 <li>Paramétrer le logiciel de paie</li>
@@ -155,7 +186,7 @@
     <div id="popup-bureautique-1" class="popup">
         <div class="popup-content">
             <span class="close-btn" onclick="closePopup('popup-bureautique-1')">&times;</span>
-            <h2>Compétences Certificat Bureautique #1 : Maîtrisez les fondamentaux Excel</h2>
+            <h2> <i class="fas fa-graduation-cap"></i> Compétences Certificat Bureautique #1 : Maîtrisez les fondamentaux Excel</h2>
             <ul>
                 <li>Prendre en main un fichier Excel</li>
                 <li>Mettre en page un fichier Excel</li>
@@ -167,7 +198,7 @@
     <div id="popup-bureautique-2" class="popup">
         <div class="popup-content">
             <span class="close-btn" onclick="closePopup('popup-bureautique-2')">&times;</span>
-            <h2>Compétences Certificat Bureautique #2 : Optimisez votre apprentissage avec l'Intelligence Artificielle</h2>
+            <h2> <i class="fas fa-graduation-cap"></i> Compétences Certificat Bureautique #2 : Optimisez votre apprentissage avec l'Intelligence Artificielle</h2>
             <ul>
                 <li>Prendre en main votre apprentissage avec l’intelligence artificielle</li>
                 <li>Approfondir votre apprentissage avec l’intelligence artificielle</li>
@@ -178,7 +209,7 @@
     <div id="popup-bureautique-3" class="popup">
         <div class="popup-content">
             <span class="close-btn" onclick="closePopup('popup-bureautique-3')">&times;</span>
-            <h2>Compétences Certificat Bureautique #3 : Initiez-vous au traitement de texte </h2>
+            <h2> <i class="fas fa-graduation-cap"></i> Compétences Certificat Bureautique #3 : Initiez-vous au traitement de texte </h2>
             <ul>
                 <li>Maîtriser les fondamentaux d’un traitement de texte</li>
                 <li>Utiliser les fonctionnalités de base du traitement de texte</li>
@@ -186,6 +217,20 @@
             </ul>
         </div>
     </div>
+
+    <div id="popup-bureautique-4" class="popup">
+        <div class="popup-content">
+            <span class="close-btn" onclick="closePopup('popup-bureautique-4')">&times;</span>
+            <h2> <i class="fas fa-graduation-cap"></i> Compétences Certificat Bureautique #4 : Communiquez en utilisant les outils numériques</h2>
+            <ul>
+                <li>Choisir un outil numérique de communication adapté</li>
+                <li>Utiliser un outil numérique en respectant ses usages</li>
+                <li>Collaborer en ligne grâce à des outils spécifiques</li>
+            </ul>
+        </div>
+    </div>
+
+    
 
     <script src="scripts.js"></script>
 </body>
