--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
             <button class="competences-btn" onclick="showCompetences('popup-rh-1')">Compétences</button>
         </div>
 
+        <div class="card rh card-2">
+            <h3><i class="fas fa-graduation-cap"></i> Élaborez un plan de recrutement </h3>
+            <p> Délivré par : Openclassrooms </p>
+            <button class="download-btn" onclick="window.open('https://drive.google.com/file/d/1zkAGtzVSQ4HOIjr79r5PJ9tZTSiHcuky/view?usp=sharing', '_blank')">Télécharger le PDF</button>
+            <button class="competences-btn" onclick="showCompetences('popup-rh-2')">Compétences</button>
+        </div>
+
         <!-- Carte Comptabilité  -->
         <div class="card comptabilite card-1">
             <h3><i class="fas fa-graduation-cap"></i> Réalisez les<br> opérations courantes<br> de comptabilité</h3>
@@ -129,6 +136,33 @@
                     </ul>
                 </li>
             </ul>                        
+        </div>
+    </div>
+
+    <div id="popup-rh-2" class="popup">
+        <div class="popup-content">
+            <span class="close-btn" onclick="closePopup('popup-rh-2')">&times;</span>
+            <h2> <i class="fas fa-graduation-cap"></i> Compétences Certificat RH #2 : Élaborez un plan de recrutement</h2>
+            <ul>
+                <li><strong>1. Préparer et valider le plan de recrutement :</strong>
+                  <ul>
+                    <li><strong>Analyse des besoins en recrutement :</strong> Évaluer les besoins de l'entreprise en termes de personnel en fonction des départs, promotions internes, créations de postes ou évolutions de la structure.</li>
+                    <li><strong>Définition des priorités :</strong> Hiérarchiser les priorités en fonction des urgences ou projets de l'entreprise, comme les postes nécessitant une expertise particulière pour des projets stratégiques.</li>
+                    <li><strong>Évaluation des ressources :</strong> Analyser l'équipe de recrutement, le budget, et les outils disponibles (logiciels, job boards, etc.).</li>
+                    <li><strong>Planification des actions de recrutement :</strong> Inclure la publication des annonces, sélection des candidats, entretiens, tests, et définir des deadlines ainsi que les ressources humaines nécessaires pour chaque étape.</li>
+                    <li><strong>Suivi et évaluation :</strong> Mettre en place un suivi pour mesurer l'efficacité des actions et ajuster si nécessaire.</li>
+                  </ul>
+                </li>
+                <li><strong>2. Réaliser des fiches de poste destinées au recrutement :</strong>
+                  <ul>
+                    <li><strong>Description précise du poste :</strong> Décrire clairement le rôle, les responsabilités, les missions quotidiennes et l’importance de la fonction.</li>
+                    <li><strong>Compétences requises :</strong> Détail des qualifications nécessaires, y compris l'expérience professionnelle, les compétences techniques et comportementales (ex : autonomie, réactivité, travail en équipe).</li>
+                    <li><strong>Conditions de travail et avantages :</strong> Inclure des informations sur les horaires, le lieu de travail, la rémunération et les avantages sociaux.</li>
+                    <li><strong>Profil recherché :</strong> Décrire les qualités humaines recherchées, telles que la motivation, l'esprit d’équipe, la capacité à travailler sous pression, et l’adaptabilité.</li>
+                    <li><strong>Lien avec les objectifs de l’entreprise :</strong> Relier la fiche de poste aux objectifs de l’entreprise pour garantir une intégration rapide des employés et leur contribution au développement de l’organisation.</li>
+                  </ul>
+                </li>
+              </ul>                                      
         </div>
     </div>
 
