--- a/index.html
+++ b/index.html
@@ -36,10 +36,17 @@
         </div>
 
         <div class="card rh card-2">
-            <h3><i class="fas fa-graduation-cap"></i> Élaborez un plan de recrutement </h3>
+            <h3><i class="fas fa-graduation-cap"></i> Élaborez <br>un plan de<br> recrutement </h3>
             <p> Délivré par : Openclassrooms </p>
             <button class="download-btn" onclick="window.open('https://drive.google.com/file/d/1zkAGtzVSQ4HOIjr79r5PJ9tZTSiHcuky/view?usp=sharing', '_blank')">Télécharger le PDF</button>
             <button class="competences-btn" onclick="showCompetences('popup-rh-2')">Compétences</button>
+        </div>
+
+        <div class="card rh card-3">
+            <h3><i class="fas fa-graduation-cap"></i> La fonction RH <br> au coeur de la <br> transformation digitale </h3>
+            <p> Délivré par : Openclassrooms </p>
+            <button class="download-btn" onclick="window.open('https://drive.google.com/file/d/12DvTpnyFJcnvNwHjzgg_I7e1gK03ZYUR/view?usp=sharing', '_blank')">Télécharger le PDF</button>
+            <button class="competences-btn" onclick="showCompetences('popup-rh-3')">Compétences</button>
         </div>
 
         <!-- Carte Comptabilité  -->
@@ -163,6 +170,27 @@
                   </ul>
                 </li>
               </ul>                                      
+        </div>
+    </div>
+
+    <div id="popup-rh-3" class="popup">
+        <div class="popup-content">
+            <span class="close-btn" onclick="closePopup('popup-rh-3')">&times;</span>
+            <h2> <i class="fas fa-graduation-cap"></i> Compétences Certificat RH #3 : La fonction RH au coeur de la transformation digitale</h2>
+            <ul>
+                <li>
+                  <strong>Transformation digitale et RH :</strong> Exploration des impacts du digital sur les fonctions RH, notamment le recrutement, la formation, et la gestion des données, avec un focus sur les nouvelles compétences, méthodes et outils (sourcing, Blended Learning, Workforce Analytics).
+                </li>
+                <li>
+                  <strong>Le digital et le recrutement :</strong> Évolution des pratiques de sourcing, importance accrue des réseaux, cooptation et innovation dans les rencontres candidat-employeur.
+                </li>
+                <li>
+                  <strong>La révolution de la formation :</strong> Transition vers des méthodes collaboratives, intégration du Blended Learning et du Social Learning, et transformation des évaluations pour s'adapter aux innovations numériques.
+                </li>
+                <li>
+                  <strong>Les relations d’entreprise et le digital :</strong> Impact des réseaux sociaux sur les relations sociales, recomposition des organisations et management, flexibilité des cadres de travail (temps, espace) et transformations des interactions humaines.
+                </li>
+              </ul>                                                 
         </div>
     </div>
 
